src/objects/US_HE_Yearly_Track_Target__c.object
<CustomObject>
    <description>Target object for US HE Yearly Track Source Report- DM/LTS/LSC will be able to measure current year tracking against prior year tracking so that they can benchmark progress against last year pipeline dynamics.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Info_Captured__c</fullName>
        <label>Date Info Captured</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>US HE Yearly Track Targets</relationshipLabel>
        <relationshipName>US_HE_Yearly_Track_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <label>Primary Selling Account</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Selling_Period__c</fullName>
        <label>Selling Period</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Code_s__c</fullName>
        <label>Territory Code(s)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>US HE Yearly Track Target</label>
    <nameField>
        <label>US HE Yearly Track Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>US HE Yearly Track Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>